<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F4F4F4F4"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/top_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </View>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/topbar"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semibold"
                        android:text="@string/app_name"
                        android:textColor="#FFF"
                        android:textSize="30sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/moon"
                        android:contentDescription="@string/todo"></ImageView>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/card"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/quick_graph"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:padding="15dp"
                    android:contentDescription="@string/todo">

                </ImageView>

                <TextView
                    android:id="@+id/rm"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/remaining"
                    android:textAlignment="center">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="goToJokesScreen"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/joke"
                        android:src="@drawable/jokes">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/joke"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="goToBoredScreen"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/bored"
                        android:src="@drawable/bored">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/bored"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/card"
                    android:onClick="goToPicsumScreen"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/picsum"
                        android:src="@drawable/picsum">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/picsum"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="goToTriviaScreen"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/trivia"
                        android:src="@drawable/trivia">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/trivia"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/card"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="goToNamoScreen"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/namo"
                        android:src="@drawable/namo">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/namo"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/card"
                    android:onClick="goToQuotesScreen"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/quotes"
                        android:src="@drawable/quotes">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/quotes"
                        android:textAlignment="center"
                        android:textSize="18sp"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
